2008-11-22  Claude Paroz  <claude@2xlibre.net>

	* stats/management/commands/update-trans.py: Prevent empty string in
	database-content.py.

2008-11-22  Claude Paroz  <claude@2xlibre.net>

	* README: Add note about translation handling.

2008-11-22  Claude Paroz  <claude@2xlibre.net>

	* README: Add note about OpenID optional support.
	* common/views.py: site_login view handles the login process.
	* media/css/login.css: New css specific to login.html.
	* media/css/main.css: Add errornote style for showing messages.
	* settings_sample.py: Add LOGIN_URL variable (may be used by
	login_required decorator).
	* languages/views.py:
	* stats/views.py:
	* teams/views.py: Use more complete RequestContext to be able to access
	user variable in templates.
	* templates/base.html: Add support for showing user messages and for
	adding extra headers (css, js, etc.).
	* templates/login.html: New template for login.
	* urls.py: Add login view.

2008-11-22  Claude Paroz  <claude@2xlibre.net>

	* common/views.py: Use RequestContext to be able to access user object in
	template.
	* media/css/main.css: Style for div#authenticated.
	* templates/500.html: The server error template was missing.
	* templates/base.html: Show username if logged in.
	* urls.py: Add URLs path if django_openid is installed.

2008-11-19  Claude Paroz  <claude@2xlibre.net>

	* stats/utils.py: sortObjectList uses a method to get sorting key, which
	is more flexible.
	* stats/views.py: Pass a method to sortObjectList.
	* templates/module_list.html: Use module.get_description for translated
	name.

2008-11-18  Claude Paroz  <claude@2xlibre.net>

	* stats/views.py: One get_object_or_404 was missing.
	* templates/languages/language_release.html: s/external/xternal to match
	RELEASE_STATUS_CHOICES.

2008-11-16  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* README: Notes to install django-debug-toolbar.
	* settings_sample.py: Added django-debug-toolbar settings.
