@@ -1,3 +1,9 @@
+2008-11-24  Stéphane Raimbault  <stephane.raimbault@gmail.com>
+
+	* vertimus/models.py: Work in progress.
+	* vertimus/tests/__init__.py: Added better unit tests
+	* vertimus/workflow_state.py: Removed.
+
 2008-11-22  Claude Paroz  <claude@2xlibre.net>
 
 	* stats/management/commands/update-trans.py: Prevent empty string in
